--- a/page2.html
+++ b/page2.html
@@ -11,12 +11,6 @@
       href="https://fonts.googleapis.com/css2?family=Grandstander:wght@200&display=swap"
       rel="stylesheet"
     />
-    <script id="template" type="text/x-tmpl-mustache">
-      <di>
-        <h2>{{}}</h2>
-        <img src="{{{}}}"/>
-      </div>
-    </script>
   </head>
   <body>
     <header>
@@ -34,14 +28,14 @@
       <div class="pagination">
         <a href="">&laquo;</a>
         <a href="index.html">1</a>
-        <a href="page2.html">2</a>
+        <a href="page-2.html">2</a>
         <a href="#">&raquo;</a>
       </div>
     </main>
     <footer>
       <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
       <script src="https://unpkg.com/mustache@latest"></script>
-      <script src="js/app.js" type="text/javascript"></script>
+      <script src="js/app2.js" type="text/javascript"></script>
     </footer>
   </body>
 </html>
