--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
       href="https://fonts.googleapis.com/css2?family=Grandstander:wght@200&display=swap"
       rel="stylesheet"
     />
-    <script id="template" type="text/x-tmpl-mustache">
-      <di>
-        <h2>{{}}</h2>
-        <img src="{{{}}}"/>
-      </div>
+    <script id="beast" type="text/x-tmpl-mustache">
+      <section class="{{keyword}}">
+        <h2>{{title}}</h2>
+        <img src="{{image_url}}"/>
+        <p>{{description}}</p>
+      </section>
     </script>
   </head>
   <body>
@@ -26,15 +27,10 @@
       </select>
     </header>
     <main>
-      <section id="photo-template">
-        <h2></h2>
-        <img src="" alt="" />
-        <p></p>
-      </section>
       <div class="pagination">
         <a href="">&laquo;</a>
         <a href="index.html">1</a>
-        <a href="page2.html">2</a>
+        <a href="page-2.html">2</a>
         <a href="#">&raquo;</a>
       </div>
     </main>
