--- a/page-2.html
+++ b/page-2.html
@@ -11,6 +11,13 @@
       href="https://fonts.googleapis.com/css2?family=Grandstander:wght@200&display=swap"
       rel="stylesheet"
     />
+    <script id="beast" type="text/x-tmpl-mustache">
+        <section class="{{keyword}}"
+            <h2>{{title}}</h2>
+            <img src="{{image_url}}"/>
+            <p>{{description}}</p>
+      </section>
+    </script>
   </head>
   <body>
     <header>
@@ -20,11 +27,6 @@
       </select>
     </header>
     <main>
-      <section id="photo-template">
-        <h2></h2>
-        <img src="" alt="" />
-        <p></p>
-      </section>
       <div class="pagination">
         <a href="">&laquo;</a>
         <a href="index.html">1</a>
