--- a/page-2.html
+++ b/page-2.html
@@ -11,8 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Grandstander:wght@200&display=swap"
       rel="stylesheet"
     />
-    <script id="beast" type="text/x-tmpl-mustache">
-        <section class="{{keyword}}"
+    <script id="beast2" type="text/x-tmpl-mustache">
+        <section class="{{keyword}}">
             <h2>{{title}}</h2>
             <img src="{{image_url}}"/>
             <p>{{description}}</p>
