--- a/index.html
+++ b/index.html
@@ -25,15 +25,19 @@
       <select id="menu">
         <option value="default">Filter by Keyword</option>
       </select>
-    </header>
-    <main>
+      <select id="sorter">
+        <option value="default">Sort Images</option>
+        <option value="alphabetical">Alphabetical</option>
+        <option value="number-horns">Number of Horns</option>
+      </select>
       <div class="pagination">
         <a href="">&laquo;</a>
         <a href="index.html">1</a>
         <a href="page-2.html">2</a>
         <a href="#">&raquo;</a>
       </div>
-    </main>
+    </header>
+    <main></main>
     <footer>
       <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
       <script src="https://unpkg.com/mustache@latest"></script>
